# sudoku

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  sources.cmake
libs/engine/: CMakeLists.txt  board.h  board_view.h  generator.h  solver.h  types.h
libs/engine/details/: board.cpp  board_view.cpp  checker.cpp  checker.h  generator.cpp  solver.cpp  utils.cpp  utils.h
tests/: CMakeLists.txt  testdefs.h  ut_sudoku_board.cpp  ut_sudoku_checker.cpp  ut_sudoku_generator.cpp  ut_sudoku_solver.cpp  ut_sudoku_utils.cpp
